<package>
  <name>filter_laser_scan_max_range</name>
  <version>0.0.1</version>
  <description>filter_laser_scan_max_range, it filters the LaserScan message to replace scans with the max_range value with (max_range - eps) </description>
  <author>Luigi Palmieri</author>

  <maintainer email="palmieri@cs.uni-freiburg.de">Luigi Palmieri</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>class_loader</build_depend>

  <run_depend>class_loader</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>laser_filters</run_depend>

  <export>
    <filters plugin="${prefix}/filter_laser_scan_max_range.xml"/>
  </export>
</package>


